More documentation related S3Method fix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ S3method(as.annual,numeric)
 S3method(as.annual,spell)
 S3method(as.annual,station)
 S3method(as.annual,yearqtr)
+S3method(as.anomaly,default)
 S3method(as.anomaly,field)
 S3method(as.anomaly,list)
 S3method(as.anomaly,station)
@@ -189,19 +190,7 @@ S3method(esd2ncdf4,eof)
 S3method(esd2ncdf4,field)
 S3method(esd2ncdf4,pca)
 S3method(esd2ncdf4,station)
-S3method(esd::as.anomaly,default)
 S3method(esd::as.daily,default)
-S3method(esd::vis,cca)
-S3method(esd::vis,default)
-S3method(esd::vis,ds)
-S3method(esd::vis,dsensemble)
-S3method(esd::vis,eof)
-S3method(esd::vis,field)
-S3method(esd::vis,map)
-S3method(esd::vis,mvr)
-S3method(esd::vis,pca)
-S3method(esd::vis,spell)
-S3method(esd::vis,station)
 S3method(exceedance,default)
 S3method(exceedance,field)
 S3method(exceedance,station)
@@ -327,6 +316,18 @@ S3method(validate,eof)
 S3method(validate,eof.comb)
 S3method(validate,eof.field)
 S3method(validate,pca)
+S3method(vis,cca)
+S3method(vis,default)
+S3method(vis,ds)
+S3method(vis,dsensemble)
+S3method(vis,dsensemble.list)
+S3method(vis,eof)
+S3method(vis,field)
+S3method(vis,map)
+S3method(vis,mvr)
+S3method(vis,pca)
+S3method(vis,spell)
+S3method(vis,station)
 S3method(visprob,default)
 S3method(visprob,station)
 S3method(visprob,station.precip)
@@ -849,7 +850,6 @@ export(validate.pca)
 export(varid)
 export(vec)
 export(vis)
-export(vis.dsensemble.list)
 export(vis.trends)
 export(visprob)
 export(visprob.station)
