More fixes related to S3method documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ S3method(as.appended,field.comb)
 S3method(as.calibrationdata,ds)
 S3method(as.calibrationdata,station)
 S3method(as.comb,eof)
+S3method(as.daily,default)
 S3method(as.daily,field)
 S3method(as.daily,station)
 S3method(as.eof,appendix)
@@ -190,7 +191,6 @@ S3method(esd2ncdf4,eof)
 S3method(esd2ncdf4,field)
 S3method(esd2ncdf4,pca)
 S3method(esd2ncdf4,station)
-S3method(esd::as.daily,default)
 S3method(exceedance,default)
 S3method(exceedance,field)
 S3method(exceedance,station)
