bugfixes and improvements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -631,6 +631,7 @@ export(lastelementrecord)
 export(lastrains)
 export(lastyear)
 export(lat)
+export(lines.IDF)
 export(loc)
 export(lon)
 export(lonlatprojection)
