fixed S3-related bug with IDF for R>4.0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 S3method(CCA,default)
 S3method(CCA,eof)
 S3method(CCA,field)
-S3method(CCA,pca)
 S3method(DS,comb)
 S3method(DS,default)
 S3method(DS,eof)
@@ -212,6 +211,7 @@ S3method(history.stamp,default)
 S3method(iid.test,default)
 S3method(iid.test,field)
 S3method(iid.test,station)
+S3method(lines,IDF)
 S3method(map,array)
 S3method(map,cca)
 S3method(map,comb)
@@ -252,6 +252,7 @@ S3method(plot,ssa)
 S3method(plot,station)
 S3method(plot,trajectory)
 S3method(plot,xval)
+S3method(plot,IDF)
 S3method(qp.test,precip)
 S3method(qp.test,station)
 S3method(qp.test,t2m)
