more fixes with upgrade to R>4 map.trajectory S3 method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -226,6 +226,7 @@ S3method(map,matrix)
 S3method(map,mvr)
 S3method(map,pca)
 S3method(map,trend)
+S3method(map,trajectory)
 S3method(matchdate,default)
 S3method(matchdate,list)
 S3method(nearest,field)
