more fixes with upgrade to R>4 PCA.trajectory S3 method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ S3method(MVR,field)
 S3method(MVR,pca)
 S3method(PCA,default)
 S3method(PCA,matrix)
+S3method(PCA,trajectory)
 S3method(PCA,station)
 S3method(WG,FT.day.t2m)
 S3method(WG,fw.day.precip)
