added 'year2date' for improved plotting of annual and daily data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -223,6 +223,7 @@ S3method(map,ds)
 S3method(map,eof)
 S3method(map,events)
 S3method(map,field)
+S3method(map,station)
 S3method(map,matrix)
 S3method(map,mvr)
 S3method(map,pca)
@@ -976,3 +977,4 @@ importFrom(utils,txtProgressBar)
 importFrom(utils,untar)
 importFrom(utils,unzip)
 importFrom(utils,write.table)
+
