minor change to retrieve.ESGF

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(CCA,default)
 S3method(CCA,eof)
 S3method(CCA,field)
+S3method(CCA,pca)
 S3method(DS,comb)
 S3method(DS,default)
 S3method(DS,eof)
@@ -28,7 +29,6 @@ S3method(MVR,field)
 S3method(MVR,pca)
 S3method(PCA,default)
 S3method(PCA,matrix)
-S3method(PCA,trajectory)
 S3method(PCA,station)
 S3method(WG,FT.day.t2m)
 S3method(WG,fw.day.precip)
@@ -212,7 +212,6 @@ S3method(history.stamp,default)
 S3method(iid.test,default)
 S3method(iid.test,field)
 S3method(iid.test,station)
-S3method(lines,IDF)
 S3method(map,array)
 S3method(map,cca)
 S3method(map,comb)
@@ -223,12 +222,10 @@ S3method(map,ds)
 S3method(map,eof)
 S3method(map,events)
 S3method(map,field)
-S3method(map,station)
 S3method(map,matrix)
 S3method(map,mvr)
 S3method(map,pca)
 S3method(map,trend)
-S3method(map,trajectory)
 S3method(matchdate,default)
 S3method(matchdate,list)
 S3method(nearest,field)
@@ -255,7 +252,6 @@ S3method(plot,ssa)
 S3method(plot,station)
 S3method(plot,trajectory)
 S3method(plot,xval)
-S3method(plot,IDF)
 S3method(qp.test,precip)
 S3method(qp.test,station)
 S3method(qp.test,t2m)
@@ -493,6 +489,7 @@ export(combine.station.field)
 export(combine.stations)
 export(combine.trajectory)
 export(combine.zoo)
+export(concat.ESGF)
 export(corfield)
 export(corfield.default)
 export(corfield.eof)
@@ -678,7 +675,6 @@ export(pca2station)
 export(pcafill)
 export(pcafill.test)
 export(pentad)
-export(plot)
 export(plot.IDF)
 export(plot.cca)
 export(plot.diagnose)
@@ -873,8 +869,11 @@ export(write2ncdf4.list)
 export(write2ncdf4.pca)
 export(write2ncdf4.station)
 export(year)
+export(year2date)
 export(ylab)
+export(yyyymmddhh2time)
 export(zeros)
+import(dplyr)
 import(ncdf4)
 import(zoo)
 importFrom(grDevices,adjustcolor)
@@ -977,4 +976,3 @@ importFrom(utils,txtProgressBar)
 importFrom(utils,untar)
 importFrom(utils,unzip)
 importFrom(utils,write.table)
-
