--- a/NAMESPACE
+++ b/NAMESPACE
@@ -225,6 +225,7 @@ S3method(map,field)
 S3method(map,matrix)
 S3method(map,mvr)
 S3method(map,pca)
+S3method(map,station)
 S3method(map,trend)
 S3method(matchdate,default)
 S3method(matchdate,list)
@@ -642,7 +643,6 @@ export(map)
 export(map.data.frame)
 export(map.dsensemble)
 export(map.pca.trajectory)
-export(map.station)
 export(map.stationmeta)
 export(map.trajectory)
 export(map2sphere)
