minor improvements: new OctMar(), attributes in subset.station and argument im in retrieve.ESGF

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -423,6 +423,7 @@ export(approx.lonlat)
 export(arec)
 export(arec.default)
 export(as.4seasons)
+export(as.OctMar)
 export(as.annual)
 export(as.anomaly)
 export(as.anomaly.field)
@@ -874,7 +875,6 @@ export(year2date)
 export(ylab)
 export(yyyymmddhh2time)
 export(zeros)
-import(dplyr)
 import(ncdf4)
 import(zoo)
 importFrom(grDevices,adjustcolor)
