minor updates of functions + manual

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(DS,default)
 S3method(DS,eof)
 S3method(DS,field)
 S3method(DS,list)
+S3method(DS,mvcomb)
 S3method(DS,pca)
 S3method(DS,station)
 S3method(DS,station.pca)
@@ -23,6 +24,7 @@ S3method(DSensemble,station)
 S3method(EOF,comb)
 S3method(EOF,default)
 S3method(EOF,field)
+S3method(EOF,mvcomb)
 S3method(MVR,default)
 S3method(MVR,eof)
 S3method(MVR,field)
@@ -137,6 +139,7 @@ S3method(as.station,eof)
 S3method(as.station,events)
 S3method(as.station,field)
 S3method(as.station,list)
+S3method(as.station,mvcomb)
 S3method(as.station,pca)
 S3method(as.station,spell)
 S3method(as.station,trajectory)
@@ -223,6 +226,7 @@ S3method(map,eof)
 S3method(map,events)
 S3method(map,field)
 S3method(map,matrix)
+S3method(map,mvcomb)
 S3method(map,mvr)
 S3method(map,pca)
 S3method(map,station)
@@ -245,6 +249,7 @@ S3method(plot,eof.comb)
 S3method(plot,eof.field)
 S3method(plot,eof.var)
 S3method(plot,field)
+S3method(plot,mvcomb)
 S3method(plot,mvr)
 S3method(plot,nevents)
 S3method(plot,pca)
@@ -290,6 +295,7 @@ S3method(subset,eof)
 S3method(subset,events)
 S3method(subset,field)
 S3method(subset,matrix)
+S3method(subset,mvcomb)
 S3method(subset,mvr)
 S3method(subset,pattern)
 S3method(subset,pca)
@@ -531,6 +537,7 @@ export(diagram.dsensemble)
 export(diagram.station)
 export(difftime.month)
 export(distAB)
+export(distance2ocean)
 export(downscaling.about)
 export(ele)
 export(ele2param)
@@ -635,6 +642,7 @@ export(lastelementrecord)
 export(lastrains)
 export(lastyear)
 export(lat)
+export(leapyear)
 export(lines.IDF)
 export(loc)
 export(lon)
@@ -660,6 +668,7 @@ export(metno.frost.meta.month)
 export(metno.frost.station)
 export(missval)
 export(month)
+export(mvcombine)
 export(n.records)
 export(nam2expr)
 export(ndig)
