fixed S3-mrethods hist.spell and subset.station

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -211,6 +211,7 @@ S3method(graph,default)
 S3method(graph,dsensemble)
 S3method(graph,list)
 S3method(graph,zoo)
+S3method(hist,spell)
 S3method(history.stamp,default)
 S3method(iid.test,default)
 S3method(iid.test,field)
@@ -300,6 +301,7 @@ S3method(subset,mvr)
 S3method(subset,pattern)
 S3method(subset,pca)
 S3method(subset,spell)
+S3method(subset,station)
 S3method(subset,trajectory)
 S3method(subset,trend)
 S3method(subset,zoo)
