minor fixes and updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -230,6 +230,7 @@ S3method(map,mvcomb)
 S3method(map,mvr)
 S3method(map,pca)
 S3method(map,station)
+S3method(map,trajectory)
 S3method(map,trend)
 S3method(matchdate,default)
 S3method(matchdate,list)
@@ -653,7 +654,6 @@ export(map.data.frame)
 export(map.dsensemble)
 export(map.pca.trajectory)
 export(map.stationmeta)
-export(map.trajectory)
 export(map2sphere)
 export(mask)
 export(matchdate)
