fixed S3 method stuff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ S3method(MVR,pca)
 S3method(PCA,default)
 S3method(PCA,matrix)
 S3method(PCA,station)
+S3method(PCA,trajectory)
 S3method(WG,FT.day.t2m)
 S3method(WG,fw.day.precip)
 S3method(WG,pca.day.t2m.precip)
@@ -57,6 +58,7 @@ S3method(anomaly,field)
 S3method(anomaly,month)
 S3method(anomaly,season)
 S3method(anomaly,station)
+S3method(anomaly,trajectory)
 S3method(arec,default)
 S3method(arec,station)
 S3method(as.4seasons,day)
@@ -146,6 +148,7 @@ S3method(as.station,trajectory)
 S3method(as.station,zoo)
 S3method(as.trajectory,default)
 S3method(as.trajectory,events)
+S3method(barplot,station)
 S3method(cbind,field)
 S3method(clim2pca,day)
 S3method(clim2pca,default)
@@ -223,6 +226,7 @@ S3method(map,corfield)
 S3method(map,data.frame)
 S3method(map,default)
 S3method(map,ds)
+S3method(map,dsensemble)
 S3method(map,eof)
 S3method(map,events)
 S3method(map,field)
@@ -251,15 +255,21 @@ S3method(plot,eof.comb)
 S3method(plot,eof.field)
 S3method(plot,eof.var)
 S3method(plot,field)
+S3method(plot,list)
 S3method(plot,mvcomb)
 S3method(plot,mvr)
 S3method(plot,nevents)
+S3method(plot,numeric)
 S3method(plot,pca)
 S3method(plot,spell)
 S3method(plot,ssa)
 S3method(plot,station)
 S3method(plot,trajectory)
 S3method(plot,xval)
+S3method(predict,cca)
+S3method(predict,ds)
+S3method(predict,mvr)
+S3method(project,ds)
 S3method(qp.test,precip)
 S3method(qp.test,station)
 S3method(qp.test,t2m)
@@ -268,6 +278,8 @@ S3method(regrid,eof)
 S3method(regrid,eof2field)
 S3method(regrid,field)
 S3method(regrid,matrix)
+S3method(regrid,pca)
+S3method(regrid,station)
 S3method(retrieve,default)
 S3method(retrieve,ncdf4)
 S3method(retrieve,rcm)
@@ -306,6 +318,8 @@ S3method(subset,station)
 S3method(subset,trajectory)
 S3method(subset,trend)
 S3method(subset,zoo)
+S3method(summary,dsensemble)
+S3method(summary,station)
 S3method(track,default)
 S3method(track,events)
 S3method(trend,coef)
@@ -390,7 +404,6 @@ export(NE)
 export(NINO3.4)
 export(NSE)
 export(PCA)
-export(PCA.trajectory)
 export(QBO)
 export(RMSE)
 export(SOI)
@@ -426,7 +439,6 @@ export(anomaly.field)
 export(anomaly.month)
 export(anomaly.season)
 export(anomaly.station)
-export(anomaly.trajectory)
 export(anomaly2trajectory)
 export(approx.lonlat)
 export(arec)
@@ -462,7 +474,6 @@ export(as.trajectory)
 export(aspect)
 export(attrcp)
 export(balls)
-export(barplot.station)
 export(biasfix)
 export(bin)
 export(calculate.cyclonebudget)
@@ -598,7 +609,6 @@ export(gridbox)
 export(gridmap)
 export(gridstation)
 export(heatwavespells)
-export(hexbin.trajectory)
 export(hist.spell)
 export(history.esd)
 export(history.stamp)
@@ -653,7 +663,6 @@ export(lonlatprojection)
 export(manual)
 export(map)
 export(map.data.frame)
-export(map.dsensemble)
 export(map.pca.trajectory)
 export(map.stationmeta)
 export(map2sphere)
@@ -708,10 +717,8 @@ export(plot.eof.comb)
 export(plot.eof.field)
 export(plot.eof.var)
 export(plot.field)
-export(plot.list)
 export(plot.mvr)
 export(plot.nevents)
-export(plot.numeric)
 export(plot.pca)
 export(plot.pca.trajectory)
 export(plot.spell)
@@ -725,13 +732,11 @@ export(precip.ERAINT)
 export(precip.Pr)
 export(precip.rv)
 export(precip.vul)
-export(predict.cca)
-export(predict.ds)
 export(predict.ds.comb)
 export(predict.ds.eof)
 export(predict.ds.pca)
 export(predict.ds.station)
-export(predict.mvr)
+export(project)
 export(project.ds)
 export(propchange)
 export(provenance)
@@ -756,8 +761,6 @@ export(records)
 export(ref)
 export(regfit)
 export(regrid)
-export(regrid.pca)
-export(regrid.station)
 export(retrieve)
 export(retrieve.ESGF)
 export(retrieve.default)
@@ -812,10 +815,7 @@ export(strstrip)
 export(subset)
 export(subset.station)
 export(subset.stationmeta)
-export(summary.dsensemble)
 export(summary.ncdf4)
-export(summary.station)
-export(sunflower.trajectory)
 export(t2m.DNMI)
 export(t2m.NCEP)
 export(t2m.NorESM.M)
