revised gridmap to include method for gridding PCA objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -214,6 +214,9 @@ S3method(graph,default)
 S3method(graph,dsensemble)
 S3method(graph,list)
 S3method(graph,zoo)
+S3method(gridmap,default)
+S3method(gridmap,pca)
+S3method(gridmap,station)
 S3method(hist,spell)
 S3method(history.stamp,default)
 S3method(iid.test,default)
