some fixed in station and select.station, but not finished

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -305,6 +305,7 @@ S3method(station,nordklim)
 S3method(subset,cca)
 S3method(subset,comb)
 S3method(subset,corfield)
+S3method(subset,data.frame)
 S3method(subset,default)
 S3method(subset,ds)
 S3method(subset,dsensemble)
