--- a/NAMESPACE
+++ b/NAMESPACE
@@ -600,6 +600,8 @@ export(g2dl.trajectory)
 export(geostrophicwind)
 export(geostrophicwind.field)
 export(geostrophicwind.station)
+export(getatt)
+export(getncid)
 export(ghcnd.data)
 export(ghcnd.meta)
 export(ghcnm.data)
@@ -677,6 +679,9 @@ export(matchdate.list)
 export(meps)
 export(meta.ESGF)
 export(meta.thredds)
+export(metaextract)
+export(metaextract.cmip)
+export(metaextract.cordex)
 export(metno.frost.meta.day)
 export(metno.frost.meta.minute)
 export(metno.frost.meta.month)
