rtools and DSensembles.pca

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -538,6 +538,7 @@ export(dX)
 export(datafrequency)
 export(day)
 export(day2IDF)
+export(decipher)
 export(density2count)
 export(diagnose)
 export(diagnose.cca)
@@ -600,6 +601,7 @@ export(g2dl.trajectory)
 export(geostrophicwind)
 export(geostrophicwind.field)
 export(geostrophicwind.station)
+export(getinterval)
 export(ghcnd.data)
 export(ghcnd.meta)
 export(ghcnm.data)
