--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ S3method(WG,fw.day.precip)
 S3method(WG,pca.day.t2m.precip)
 S3method(WG,station)
 S3method(aggregate,comb)
+S3method(aggregate,dsensemble)
 S3method(aggregate,field)
 S3method(aggregate,size)
 S3method(aggregate,station)
