updated NAMESPACE and documentation with Roxygen

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -602,7 +602,9 @@ export(g2dl.trajectory)
 export(geostrophicwind)
 export(geostrophicwind.field)
 export(geostrophicwind.station)
+export(getatt)
 export(getinterval)
+export(getncid)
 export(ghcnd.data)
 export(ghcnd.meta)
 export(ghcnm.data)
@@ -680,6 +682,9 @@ export(matchdate.list)
 export(meps)
 export(meta.ESGF)
 export(meta.thredds)
+export(metaextract)
+export(metaextract.cmip)
+export(metaextract.cordex)
 export(metno.frost.meta.day)
 export(metno.frost.meta.minute)
 export(metno.frost.meta.month)
