added ghcnd.meta and ghcnd.station

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -605,6 +605,7 @@ export(geostrophicwind.station)
 export(getinterval)
 export(ghcnd.data)
 export(ghcnd.meta)
+export(ghcnd.station)
 export(ghcnm.data)
 export(ghcnm.meta)
 export(graph)
