renamed new functions GHCND.meta and GHCND.station

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -393,6 +393,8 @@ export(EOF)
 export(ERA5.CDS)
 export(FTscramble)
 export(GDD)
+export(GHCND.meta)
+export(GHCND.station)
 export(GSL)
 export(GSL.nasa)
 export(HDD)
@@ -605,7 +607,6 @@ export(geostrophicwind.station)
 export(getinterval)
 export(ghcnd.data)
 export(ghcnd.meta)
-export(ghcnd.station)
 export(ghcnm.data)
 export(ghcnm.meta)
 export(graph)
