minor fixes and improvements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -223,6 +223,7 @@ S3method(history.stamp,default)
 S3method(iid.test,default)
 S3method(iid.test,field)
 S3method(iid.test,station)
+S3method(lines,IDF)
 S3method(map,array)
 S3method(map,cca)
 S3method(map,comb)
@@ -245,6 +246,7 @@ S3method(matchdate,default)
 S3method(matchdate,list)
 S3method(nearest,field)
 S3method(nearest,station)
+S3method(plot,IDF)
 S3method(plot,cca)
 S3method(plot,cyclonebudget)
 S3method(plot,diagnose)
@@ -665,7 +667,6 @@ export(lastrains)
 export(lastyear)
 export(lat)
 export(leapyear)
-export(lines.IDF)
 export(loc)
 export(lon)
 export(lonlatprojection)
@@ -707,7 +708,6 @@ export(pca2station)
 export(pcafill)
 export(pcafill.test)
 export(pentad)
-export(plot.IDF)
 export(plot.cca)
 export(plot.diagnose)
 export(plot.diagnose.comb.eof)
