fixed minor bug in station

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -687,6 +687,7 @@ export(meta.thredds)
 export(metaextract)
 export(metaextract.cmip)
 export(metaextract.cordex)
+export(metno.frost.ele)
 export(metno.frost.meta.day)
 export(metno.frost.meta.minute)
 export(metno.frost.meta.month)
