--- a/NAMESPACE
+++ b/NAMESPACE
@@ -395,8 +395,6 @@ export(EOF)
 export(ERA5.CDS)
 export(FTscramble)
 export(GDD)
-export(GHCND.meta)
-export(GHCND.station)
 export(GSL)
 export(GSL.nasa)
 export(HDD)
@@ -610,6 +608,8 @@ export(getatt)
 export(getinterval)
 export(getncid)
 export(ghcnd.data)
+export(ghcnd.meta)
+export(ghcnd.station)
 export(ghcnm.data)
 export(ghcnm.meta)
 export(graph)
