Fixed undefined exports
getatt, getncid, metaextract, metaextract.cmip, metaextract.cordex

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -604,9 +604,9 @@ export(g2dl.trajectory)
 export(geostrophicwind)
 export(geostrophicwind.field)
 export(geostrophicwind.station)
-export(getatt)
+#export(getatt)
 export(getinterval)
-export(getncid)
+#export(getncid)
 export(ghcnd.data)
 export(ghcnd.meta)
 export(ghcnd.station)
@@ -684,9 +684,9 @@ export(matchdate.list)
 export(meps)
 export(meta.ESGF)
 export(meta.thredds)
-export(metaextract)
-export(metaextract.cmip)
-export(metaextract.cordex)
+#export(metaextract)
+#export(metaextract.cmip)
+#export(metaextract.cordex)
 export(metno.frost.ele)
 export(metno.frost.meta.day)
 export(metno.frost.meta.minute)
