updated NAMESPACE and DESCRIPTION

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -288,9 +288,6 @@ S3method(regrid,pca)
 S3method(regrid,station)
 S3method(retrieve,default)
 S3method(retrieve,ncdf4)
-S3method(retrieve,rcm)
-S3method(retrieve,station)
-S3method(retrieve,stationsummary)
 S3method(seasevol,station)
 S3method(season,default)
 S3method(sort,station)
@@ -354,7 +351,6 @@ S3method(vis,dsensemble)
 S3method(vis,dsensemble.list)
 S3method(vis,eof)
 S3method(vis,field)
-S3method(vis,map)
 S3method(vis,mvr)
 S3method(vis,pca)
 S3method(vis,spell)
@@ -604,9 +600,9 @@ export(g2dl.trajectory)
 export(geostrophicwind)
 export(geostrophicwind.field)
 export(geostrophicwind.station)
-#export(getatt)
+export(getatt)
 export(getinterval)
-#export(getncid)
+export(getncid)
 export(ghcnd.data)
 export(ghcnd.meta)
 export(ghcnd.station)
@@ -684,9 +680,9 @@ export(matchdate.list)
 export(meps)
 export(meta.ESGF)
 export(meta.thredds)
-#export(metaextract)
-#export(metaextract.cmip)
-#export(metaextract.cordex)
+export(metaextract)
+export(metaextract.cmip)
+export(metaextract.cordex)
 export(metno.frost.ele)
 export(metno.frost.meta.day)
 export(metno.frost.meta.minute)
@@ -878,6 +874,7 @@ export(validate.pca)
 export(varid)
 export(vec)
 export(vis)
+export(vis.map)
 export(vis.trends)
 export(visprob)
 export(visprob.station)
