updated NAMESPACE and man

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -271,7 +271,6 @@ S3method(plot,spell)
 S3method(plot,ssa)
 S3method(plot,station)
 S3method(plot,trajectory)
-S3method(plot,xval)
 S3method(predict,cca)
 S3method(predict,ds)
 S3method(predict,mvr)
@@ -670,7 +669,9 @@ export(lonlatprojection)
 export(manual)
 export(map)
 export(map.data.frame)
+export(map.pca)
 export(map.pca.trajectory)
+export(map.station)
 export(map.stationmeta)
 export(map2sphere)
 export(mask)
