updated with Roxygen

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -731,6 +731,7 @@ export(plot.field)
 export(plot.mvr)
 export(plot.nevents)
 export(plot.pca)
+export(plot.pca.multiple)
 export(plot.pca.trajectory)
 export(plot.spell)
 export(plot.ssa)
