added some functionality towards radiosondes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ S3method(MVR,field)
 S3method(MVR,pca)
 S3method(PCA,default)
 S3method(PCA,matrix)
+S3method(PCA,radiosonde)
 S3method(PCA,station)
 S3method(PCA,trajectory)
 S3method(WG,FT.day.t2m)
@@ -315,6 +316,7 @@ S3method(subset,mvcomb)
 S3method(subset,mvr)
 S3method(subset,pattern)
 S3method(subset,pca)
+S3method(subset,radiosonde)
 S3method(subset,spell)
 S3method(subset,station)
 S3method(subset,stationmeta)
@@ -733,6 +735,7 @@ export(plot.nevents)
 export(plot.pca)
 export(plot.pca.multiple)
 export(plot.pca.trajectory)
+export(plot.radiosonde)
 export(plot.spell)
 export(plot.ssa)
 export(plot.station)
