Now the R-script was in the right folder

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -665,6 +665,7 @@ export(lastrains)
 export(lastyear)
 export(lat)
 export(leapyear)
+export(list_thredds)
 export(loc)
 export(lon)
 export(lonlatprojection)
