--- a/NAMESPACE
+++ b/NAMESPACE
@@ -796,6 +796,7 @@ export(season.abb)
 export(season.trajectory)
 export(select.station)
 export(senorge)
+export(shiftyear)
 export(slp.DNMI)
 export(slp.NCEP)
 export(softattr)
