updated map.dsensemble and related functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -422,6 +422,7 @@ export(WG.pca.day.t2m.precip)
 export(WG.station)
 export(aggregate.area)
 export(aggregate.comb)
+export(aggregate.dsensemble)
 export(aggregate.field)
 export(aggregate.grid)
 export(aggregate.size)
