trendplot for dsensemble - updated NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -860,6 +860,7 @@ export(trajectory2station)
 export(trend)
 export(trend.coef)
 export(trend.default)
+export(trend.dsensemble)
 export(trend.eof)
 export(trend.err)
 export(trend.field)
