station.s_enda & meta.s_enda

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -302,6 +302,7 @@ S3method(station,metnom)
 S3method(station,nacd)
 S3method(station,narp)
 S3method(station,nordklim)
+S3method(station,s_enda)
 S3method(subset,cca)
 S3method(subset,comb)
 S3method(subset,corfield)
@@ -684,6 +685,7 @@ export(matchdate.default)
 export(matchdate.list)
 export(meps)
 export(meta.ESGF)
+export(meta.s_enda)
 export(meta.thredds)
 export(metaextract)
 export(metaextract.cmip)
