--- a/NAMESPACE
+++ b/NAMESPACE
@@ -302,7 +302,6 @@ S3method(station,metnom)
 S3method(station,nacd)
 S3method(station,narp)
 S3method(station,nordklim)
-S3method(station,s_enda)
 S3method(subset,cca)
 S3method(subset,comb)
 S3method(subset,corfield)
@@ -685,7 +684,7 @@ export(matchdate.default)
 export(matchdate.list)
 export(meps)
 export(meta.ESGF)
-export(meta.s_enda)
+export(meta.senda)
 export(meta.thredds)
 export(metaextract)
 export(metaextract.cmip)
@@ -826,6 +825,7 @@ export(station.nacd)
 export(station.narp)
 export(station.newlyn)
 export(station.nordklim)
+export(station.senda)
 export(station.sonel)
 export(station.thredds)
 export(station2field)
