minor updates and fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -871,6 +871,7 @@ export(trend.pval)
 export(trend.station)
 export(trend.zoo)
 export(trend.zoo.multi)
+export(trendmap.dsensemble)
 export(unit)
 export(update.ncdf4.station)
 export(validate)
