--- a/.github/workflows/esd_check.yml
+++ b/.github/workflows/esd_check.yml
@@ -22,9 +22,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up R ${{ matrix.r-version }}
-        uses: r-lib/actions/setup-r@v1
+        uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.r-version }}
+      - uses: r-lib/actions/setup-r-dependencies@v2
       - name: Install dependencies
         run: |
           install.packages(c("devtools", "ncdf4"))
