--- a/.github/workflows/esd_check.yml
+++ b/.github/workflows/esd_check.yml
@@ -25,6 +25,8 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.r-version }}
+      - name: Install packages
+        run: install.packages("rcmdcheck")
       - name: Check
         run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error")
         shell: Rscript {0}
