--- a/.github/workflows/esd_check.yml
+++ b/.github/workflows/esd_check.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-18.04
     strategy:
       matrix:
-        r-version: ['3.6.3', '4.1.1']
+        r-version: ['4.1.1'] #'3.6.3',
 
     steps:
       - uses: actions/checkout@v3
