minor changes of storm track related functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -563,6 +563,7 @@ export(ele)
 export(ele2param)
 export(element.kode)
 export(ensemblemean)
+export(enumerate)
 export(eof2field)
 export(eofvar)
 export(err)
