Minor fixes after merge of Frost branch

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -690,11 +690,11 @@ export(meta.thredds)
 export(metaextract)
 export(metaextract.cmip)
 export(metaextract.cordex)
+export(metno.frost.data)
 export(metno.frost.ele)
 export(metno.frost.meta.day)
 export(metno.frost.meta.minute)
 export(metno.frost.meta.month)
-export(metno.frost.station)
 export(missval)
 export(month)
 export(mvcombine)
@@ -831,7 +831,6 @@ export(station.sonel)
 export(station.thredds)
 export(station2field)
 export(stid)
-export(stnr)
 export(strstrip)
 export(subset.station)
 export(subset.stationmeta)
