new function for producing polarstereographic view on field objects: showmaps

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -800,6 +800,7 @@ export(season.trajectory)
 export(select.station)
 export(senorge)
 export(shiftyear)
+export(showmaps)
 export(slp.DNMI)
 export(slp.NCEP)
 export(softattr)
