fixed map functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -678,6 +678,7 @@ export(map.pca)
 export(map.pca.trajectory)
 export(map.station)
 export(map.stationmeta)
+export(map.trajectory)
 export(map2sphere)
 export(mask)
 export(matchdate)
