minor updates connected to as.field.dsensemble

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,7 +92,6 @@ S3method(as.daily,station)
 S3method(as.eof,appendix)
 S3method(as.eof,comb)
 S3method(as.eof,ds)
-S3method(as.eof,dsensemble)
 S3method(as.eof,dsensemble.pca)
 S3method(as.eof,eof)
 S3method(as.eof,field)
@@ -103,7 +102,7 @@ S3method(as.events,trajectory)
 S3method(as.field,comb)
 S3method(as.field,default)
 S3method(as.field,ds)
-S3method(as.field,dsensemble.eof)
+S3method(as.field,dsensemble)
 S3method(as.field,eof)
 S3method(as.field,events)
 S3method(as.field,field)
