bug-fix on subset.matrix/subset.default

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -302,10 +302,10 @@ S3method(station,metnom)
 S3method(station,nacd)
 S3method(station,narp)
 S3method(station,nordklim)
+S3method(subset,Default)
 S3method(subset,cca)
 S3method(subset,comb)
 S3method(subset,corfield)
-S3method(subset,default)
 S3method(subset,ds)
 S3method(subset,dsensemble)
 S3method(subset,eof)
