added new options for write2ncdf4.dsensemble

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -833,6 +833,7 @@ export(station.thredds)
 export(station2field)
 export(stid)
 export(strstrip)
+export(subset.dsensemble)
 export(subset.station)
 export(subset.stationmeta)
 export(summary.ncdf4)
