updates related to write2ncdf4.dsensemble

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,7 @@ S3method(as.daily,station)
 S3method(as.eof,appendix)
 S3method(as.eof,comb)
 S3method(as.eof,ds)
+S3method(as.eof,dsensemble)
 S3method(as.eof,dsensemble.pca)
 S3method(as.eof,eof)
 S3method(as.eof,field)
@@ -789,6 +790,7 @@ export(retrieve.station)
 export(retrieve.stationsummary)
 export(rmse)
 export(rotM)
+export(round2magnitude)
 export(sametimescale)
 export(scatter)
 export(scatterplot.rainequation)
