--- a/NAMESPACE
+++ b/NAMESPACE
@@ -370,6 +370,7 @@ S3method(write2ncdf4,pca)
 S3method(write2ncdf4,station)
 export(ABC4ESD)
 export(AMO)
+export(AreaClimateIndicator)
 export(C.C.eq)
 export(CCA)
 export(CCI)
