added function to combine netCDF files with station data, fixed/improved write2ncdf.station and retrieve.stationsummary

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -703,6 +703,8 @@ export(month)
 export(mvcombine)
 export(n.records)
 export(nam2expr)
+export(nc4add.stations)
+export(nc4combine.stations)
 export(ndig)
 export(nearest)
 export(nearest.field)
