--- a/NAMESPACE
+++ b/NAMESPACE
@@ -843,6 +843,7 @@ export(subset.dsensemble)
 export(subset.station)
 export(subset.stationmeta)
 export(summary.ncdf4)
+export(sunspots)
 export(t2m.DNMI)
 export(t2m.NCEP)
 export(t2m.NorESM.M)
