--- a/NAMESPACE
+++ b/NAMESPACE
@@ -760,6 +760,7 @@ export(predict.ds.comb)
 export(predict.ds.eof)
 export(predict.ds.pca)
 export(predict.ds.station)
+export(predictorpatterns)
 export(project)
 export(project.ds)
 export(propchange)
