added domumncentation on dT()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -536,6 +536,7 @@ export(crossval.dsensemble)
 export(crossval.list)
 export(cumugram)
 export(cv)
+export(dT)
 export(dX)
 export(dY)
 export(datafrequency)
