bugfixes in anomaly()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -264,6 +264,7 @@ S3method(plot,eof.var)
 S3method(plot,field)
 S3method(plot,list)
 S3method(plot,mvcomb)
+S3method(plot,mvcomb.field)
 S3method(plot,mvr)
 S3method(plot,nevents)
 S3method(plot,numeric)
@@ -287,6 +288,7 @@ S3method(regrid,matrix)
 S3method(regrid,pca)
 S3method(regrid,station)
 S3method(retrieve,default)
+S3method(retrieve,dsensemble)
 S3method(retrieve,ncdf4)
 S3method(seasevol,station)
 S3method(season,default)
@@ -681,6 +683,7 @@ export(map.pca)
 export(map.pca.trajectory)
 export(map.station)
 export(map.stationmeta)
+export(map.stationsummary)
 export(map.trajectory)
 export(map2sphere)
 export(mask)
@@ -740,6 +743,7 @@ export(plot.eof.comb)
 export(plot.eof.field)
 export(plot.eof.var)
 export(plot.field)
+export(plot.mvcomb.ds)
 export(plot.mvr)
 export(plot.nevents)
 export(plot.pca)
@@ -787,6 +791,7 @@ export(records)
 export(ref)
 export(regfit)
 export(regrid)
+export(regrid.pca2station)
 export(retrieve)
 export(retrieve.ESGF)
 export(retrieve.default)
@@ -842,6 +847,7 @@ export(station2field)
 export(stid)
 export(strstrip)
 export(subset.dsensemble)
+export(subset.dsensemble.multi)
 export(subset.station)
 export(subset.stationmeta)
 export(summary.ncdf4)
