plot.IDF in namelist

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -672,6 +672,7 @@ export(lastrains)
 export(lastyear)
 export(lat)
 export(leapyear)
+export(lines.IDF)
 export(list_thredds)
 export(loc)
 export(lon)
@@ -725,6 +726,7 @@ export(pca2station)
 export(pcafill)
 export(pcafill.test)
 export(pentad)
+export(plot.IDF)
 export(plot.cca)
 export(plot.diagnose)
 export(plot.diagnose.comb.eof)
