bugfixes & improvement: station.gloss subset.dsensemble

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -294,7 +294,9 @@ S3method(seasevol,station)
 S3method(season,default)
 S3method(sort,station)
 S3method(spell,default)
+S3method(spell,new)
 S3method(spell,station)
+S3method(spell,test)
 S3method(station,default)
 S3method(station,ecad)
 S3method(station,ghcnd)
