Re-wrote WG.fw.day.precip to work with DS output (mu & fw)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -861,6 +861,7 @@ export(t2m.NCEP)
 export(t2m.NorESM.M)
 export(t2m.Pr)
 export(t2m.vul)
+export(test.WG.fw.day.precip)
 export(test.aggregate.grid)
 export(test.ds.field)
 export(test.howsimilar)
