--- a/NAMESPACE
+++ b/NAMESPACE
@@ -712,6 +712,7 @@ export(n.records)
 export(nam2expr)
 export(nc4add.stations)
 export(nc4combine.stations)
+export(ncrcat.station)
 export(ndig)
 export(nearest)
 export(nearest.field)
