updates here and there

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -684,6 +684,7 @@ export(map)
 export(map.data.frame)
 export(map.pca)
 export(map.pca.trajectory)
+export(map.sf)
 export(map.station)
 export(map.stationmeta)
 export(map.stationsummary)
