added function to generate a label for plots, used in sphere

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -607,6 +607,7 @@ export(g2dl.events)
 export(g2dl.field)
 export(g2dl.stationmeta)
 export(g2dl.trajectory)
+export(generate_varlabel)
 export(geostrophicwind)
 export(geostrophicwind.field)
 export(geostrophicwind.station)
