--- a/NAMESPACE
+++ b/NAMESPACE
@@ -297,6 +297,7 @@ S3method(spell,default)
 S3method(spell,old)
 S3method(spell,station)
 S3method(spell,test)
+S3method(station,GHCND)
 S3method(station,default)
 S3method(station,ecad)
 S3method(station,ghcnd)
@@ -697,6 +698,7 @@ export(matchdate.default)
 export(matchdate.list)
 export(meps)
 export(meta.ESGF)
+export(meta.GHCND)
 export(meta.senda)
 export(meta.thredds)
 export(metaextract)
@@ -836,6 +838,7 @@ export(sst.DNMI)
 export(sst.NCEP)
 export(stand)
 export(station)
+export(station.GHCND)
 export(station.default)
 export(station.ecad)
 export(station.ghcnd)
