minor fixes, adjusted range of figure in map2sphere

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -208,6 +208,7 @@ S3method(g2dl,default)
 S3method(g2dl,eof)
 S3method(g2dl,events)
 S3method(g2dl,field)
+S3method(g2dl,station)
 S3method(g2dl,stationmeta)
 S3method(g2dl,trajectory)
 S3method(geostrophicwind,field)
@@ -605,6 +606,7 @@ export(g2dl.default)
 export(g2dl.eof)
 export(g2dl.events)
 export(g2dl.field)
+export(g2dl.station)
 export(g2dl.stationmeta)
 export(g2dl.trajectory)
 export(generate_varlabel)
