updated map2sphere, putting coordinate transformation into its own function (cartesian2sphere)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -490,6 +490,7 @@ export(biasfix)
 export(bin)
 export(calculate.cyclonebudget)
 export(calendar)
+export(cartesian2sphere)
 export(cbind.field)
 export(check.bad.dates)
 export(check.ncdf4)
@@ -549,6 +550,7 @@ export(datafrequency)
 export(day)
 export(day2IDF)
 export(decipher)
+export(degrees2radians)
 export(density2count)
 export(diagnose)
 export(diagnose.cca)
