added and updated functions related to plotting a spherical grid; updated CCI so that the field is split into two overlapping regions if a whole spherical cap is analysed, to avoid edge problems

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -789,6 +789,7 @@ export(qp.test.station)
 export(qqgeom)
 export(qual)
 export(radar)
+export(radians2degrees)
 export(rainequation)
 export(rainvar)
 export(rainvartrend)
@@ -834,6 +835,8 @@ export(spell)
 export(spell.default)
 export(spell.old)
 export(spell.station)
+export(sphere2cartesian)
+export(spherical_contour)
 export(src)
 export(sst.DNMI)
 export(sst.NCEP)
