--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,8 @@ Suggests:
     sf,
     oce,
     dplyr,
-    tidyverse
+    tidyverse,
+    MBA
 Description: The package contains R functions for retrieving data, making climate analysis and downscaling of monthly mean and daily mean global climate scenarios.
 License: GPL (>= 2)
 URL: http://github.com/metno/esd
