updated mapping function etc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -298,7 +298,6 @@ S3method(spell,default)
 S3method(spell,old)
 S3method(spell,station)
 S3method(spell,test)
-S3method(station,GHCND)
 S3method(station,default)
 S3method(station,ecad)
 S3method(station,ghcnd)
@@ -806,6 +805,7 @@ export(regrid.pca2station)
 export(retrieve)
 export(retrieve.ESGF)
 export(retrieve.default)
+export(retrieve.dsensemble)
 export(retrieve.ncdf4)
 export(retrieve.rcm)
 export(retrieve.station)
