improved WG and bugfix in map2sphere

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,8 +35,8 @@ S3method(PCA,radiosonde)
 S3method(PCA,station)
 S3method(PCA,trajectory)
 S3method(WG,FT.day.t2m)
+S3method(WG,bivariate)
 S3method(WG,fwmu.day.precip)
-S3method(WG,pca.day.t2m.precip)
 S3method(WG,station)
 S3method(aggregate,comb)
 S3method(aggregate,dsensemble)
@@ -416,15 +416,17 @@ export(NSE)
 export(PCA)
 export(QBO)
 export(RMSE)
+export(RSS)
 export(SOI)
 export(SSA)
 export(Sunspots)
 export(TGW)
+export(UAH)
 export(UTM2LatLon)
 export(WG)
 export(WG.FT.day.t2m)
+export(WG.bivariate)
 export(WG.fwmu.day.precip)
-export(WG.pca.day.t2m.precip)
 export(WG.station)
 export(aggregate.area)
 export(aggregate.comb)
@@ -487,6 +489,7 @@ export(attrcp)
 export(balls)
 export(biasfix)
 export(bin)
+export(bivariate.hist)
 export(calculate.cyclonebudget)
 export(calendar)
 export(cartesian2sphere)
