New function concat_nc_along_stid combines netCDF files for stations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -528,6 +528,7 @@ export(combine.stations)
 export(combine.trajectory)
 export(combine.zoo)
 export(concat.ESGF)
+export(concat_nc_along_stid)
 export(corfield)
 export(corfield.default)
 export(corfield.eof)
