updated spherical mapping - not quite done

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -815,6 +815,9 @@ export(retrieve.station)
 export(retrieve.stationsummary)
 export(rmse)
 export(rotM)
+export(rotX)
+export(rotY)
+export(rotZ)
 export(round2magnitude)
 export(sametimescale)
 export(scatter)
