--- a/NAMESPACE
+++ b/NAMESPACE
@@ -270,6 +270,7 @@ S3method(plot,mvr)
 S3method(plot,nevents)
 S3method(plot,numeric)
 S3method(plot,pca)
+S3method(plot,scatterplotrainequation)
 S3method(plot,spell)
 S3method(plot,ssa)
 S3method(plot,station)
@@ -527,8 +528,8 @@ export(combine.station.field)
 export(combine.stations)
 export(combine.trajectory)
 export(combine.zoo)
+export(combine_nc_stid)
 export(concat.ESGF)
-export(concat_nc_along_stid)
 export(corfield)
 export(corfield.default)
 export(corfield.eof)
