update mapping functions plus minor fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -843,7 +843,6 @@ export(spell)
 export(spell.default)
 export(spell.old)
 export(spell.station)
-export(sphere)
 export(sphere2cartesian)
 export(spherical_contour)
 export(src)
@@ -868,6 +867,7 @@ export(station.senda)
 export(station.sonel)
 export(station.thredds)
 export(station2field)
+export(station2sphere)
 export(stid)
 export(strstrip)
 export(subset.dsensemble.multi)
