added fig() to the package and improved map.station(): it returns some more graphics attributes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -597,6 +597,7 @@ export(exceedance.station)
 export(exit)
 export(expandpca)
 export(factor2numeric)
+export(fig)
 export(figlab)
 export(file.class)
 export(filt)
@@ -770,6 +771,7 @@ export(plot.station)
 export(plot.trajectory)
 export(plot.xsection)
 export(plot.xval)
+export(plume)
 export(polyfit.trajectory)
 export(precip.ERAINT)
 export(precip.Pr)
@@ -880,6 +882,7 @@ export(t2m.NCEP)
 export(t2m.NorESM.M)
 export(t2m.Pr)
 export(t2m.vul)
+export(tableofmodels)
 export(test.WG.fwmu.day.precip)
 export(test.aggregate.grid)
 export(test.ds.field)
