--- a/NAMESPACE
+++ b/NAMESPACE
@@ -635,6 +635,7 @@ export(gridbox)
 export(gridmap)
 export(gridstation)
 export(heatwavespells)
+export(hex_to_rgb)
 export(hist.spell)
 export(history.esd)
 export(history.stamp)
