--- a/NAMESPACE
+++ b/NAMESPACE
@@ -242,6 +242,7 @@ S3method(map,mvcomb)
 S3method(map,mvr)
 S3method(map,pca)
 S3method(map,station)
+S3method(map,stationmeta)
 S3method(map,trajectory)
 S3method(map,trend)
 S3method(matchdate,default)
