added retrieve.map and demo dse2ncdf

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -292,6 +292,7 @@ S3method(regrid,pca)
 S3method(regrid,station)
 S3method(retrieve,default)
 S3method(retrieve,dsensemble)
+S3method(retrieve,map)
 S3method(retrieve,ncdf4)
 S3method(seasevol,station)
 S3method(season,default)
