some minor improvements in the documentation and introduction of ncvars()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -363,11 +363,13 @@ S3method(visprob,station)
 S3method(visprob,station.precip)
 S3method(wheel,spell)
 S3method(wheel,station)
+S3method(write2ncdf4,array)
 S3method(write2ncdf4,default)
 S3method(write2ncdf4,dsensemble)
 S3method(write2ncdf4,eof)
 S3method(write2ncdf4,field)
 S3method(write2ncdf4,list)
+S3method(write2ncdf4,matrix)
 S3method(write2ncdf4,pca)
 S3method(write2ncdf4,station)
 export(ABC4ESD)
@@ -720,6 +722,7 @@ export(nam2expr)
 export(nc4add.stations)
 export(nc4combine.stations)
 export(ncrcat.station)
+export(ncvars)
 export(ndig)
 export(nearest)
 export(nearest.field)
@@ -939,10 +942,12 @@ export(wheel.spell)
 export(wheel.station)
 export(windrose)
 export(write2ncdf4)
+export(write2ncdf4.array)
 export(write2ncdf4.dsensemble)
 export(write2ncdf4.eof)
 export(write2ncdf4.field)
 export(write2ncdf4.list)
+export(write2ncdf4.matrix)
 export(write2ncdf4.pca)
 export(write2ncdf4.station)
 export(year)
